--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   
    <body>
-   <p>Here is Steven's resume</p>
+     <p>Here is <b>Steven's</b> resume</p>
      <p>Here is an upgrade</p>
    </body>
 </html>
