--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  
-   <body>
-     <p>Here is <b>Steven's</b> resume</p>
-     <p>Here is an upgrade</p>
-   </body>
-</html>
+<html lang="en">
+	<head>
+		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+		<meta content="utf-8" http-equiv="encoding">
+		<title>Advanced Resume</title>
+		<link rel="stylesheet" type="text/css" href="advanced.css">
+	</head>
+
+	<body>
+		<div id="container">
+			<img src="AlkireFront.png" id="pic">
+			<div id="content-contact">
+				Steven Alkire
+			</div>
+      
+  </body>
