--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 	<body>
 		<div id="container">
-			<img src="AlkireFront.png" id="pic">
+			<img src="AlkireFront.jpg" id="pic">
 			<div id="content-contact">
 				Steven Alkire
 			</div>
