--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta content="utf-8" http-equiv="encoding">
-		<title>Advanced Resume</title>
+		<title>Steven Alkire's Resume</title>
 		<link rel="stylesheet" type="text/css" href="advanced.css">
 	</head>
 
