--- a/index.html
+++ b/index.html
@@ -11,7 +11,27 @@
 		<div id="container">
 			<img src="AlkireFront.jpg" id="pic">
 			<div id="content-contact">
-				Steven Alkire
+				Steven Aklire
 			</div>
-      
-  </body>
+
+			<div id="content-info">
+				<p>
+					Phone: 602.710.9853
+					<br>
+					Address: 17641 W Valentine St, Surprise, AZ, 85388
+				</p>
+			</div>
+
+			<div id="content-body">
+				<div id="content-summary">
+					<div id="content-summarycontent">
+						Professional, detail-oriented individual motivated to drive
+						projects from start to finish as part of a dynamic team.
+						Results-oriented Computer Support Technician with superb problem
+						-solving and critical thinking skills,
+						as well as a meticulous attention to detail and methodical nature.
+					</div>
+				</div>
+				
+	</body>
+</html>
