--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	</head>
 
 	<body>
-		<div id="container">
-			<img src="AlkireFront.jpg" id="pic">
+		<div id="portrait">
+			<img src="AlkireFront.jpg" id="portrait">
 			<div id="content-contact">
 				Steven Aklire
 			</div>
