--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 	</head>
 
 	<body>
-		<div id="portrait">
-			<img src="AlkireFront.jpg" id="portrait">
+		<div class="portrait">
+			<img src="AlkireFront.jpg">
+		</div>
+
 			<div id="content-contact">
 				Steven Aklire
 			</div>
