--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
 	<body>
 		<div class="portrait">
-			<img src="AlkireFront.jpg">
+			<img src="AlkireFront.jpg"
+			     max-width:100%;
+			     max-height:100%;>
 		</div>
 
 			<div id="content-contact">
