--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 			<div id="content-info">
 				<p>
-					Phone: 602.710.9853
+					Phone: (602) 710-9853
 					<br>
 					Address: 17641 W Valentine St, Surprise, AZ, 85388
 				</p>
