--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 
 	<body>
 		<div class="portrait">
-			<img src="AlkireFront.jpg"
-			     max-width:100%;
-			     max-height:100%;>
+			<img src="AlkireFront.jpg">
 		</div>
 
 			<div id="content-contact">
