--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 	<body>
 		<div id="portrait">
-			<img src="AlkireFront.jpg">
+			<img src="AlkireFront.jpg" id="portrait">
 		</div>
 
 			<div id="content-contact">
