--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	</head>
 
 	<body>
-		<div id="portrait">
-			<img src="AlkireFront.jpg" id="portrait">
+		<div id="container">
+			<img src="AlkireFront.jpg" id="pic">
 		</div>
 
 			<div id="content-contact">
