--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
 	<body>
 		<div id="container">
-			<img src="AlkireFront.jpg" id="pic">
+			<img src="AlkireFront.jpg" id="pic"
+			     max-width:100%;
+			     max-height:100%;>
 		</div>
 
 			<div id="content-contact">
