--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 
 	<body>
 		<div id="container">
-			<img src="AlkireFront.jpg" id="pic"
-			     max-width:100%;
-			     max-height:100%;>
+			<img src="AlkireFront.jpg" id="pic">
 		</div>
 
 			<div id="content-contact">
