--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						Professional, detail-oriented individual motivated to drive
 						projects from start to finish as part of a dynamic team.
 						Results-oriented Computer Support Technician with superb problem
-						-solving and critical thinking skills,
+						solving and critical thinking skills,
 						as well as a meticulous attention to detail and methodical nature.
 					</div>
 				</div>
