--- a/index.html
+++ b/index.html
@@ -54,6 +54,16 @@
 			Education
 		</div>
 				
-				
+		<div id="content-prime">
+            <h3>Rio Salado</h3>
+		<div class="block-date">
+                <div class="date">October 2010 - February 2015</div>
+                <h4>Certificate of Completion in Computer Usage and Applications</h4>
+            	</div>
+			
+		<div class="block-date">
+             	<div class="date">March 2015 - October 2018</div>
+                <h4>Certificate of Completion in Networking: Design and System Support</h4>
+            </div>
 	</body>
 </html>
