--- a/index.html
+++ b/index.html
@@ -55,21 +55,31 @@
 		</div>
 				
 		<div id="content-prime">
-            <h3>Rio Salado</h3>
-		<div class="block-date">
-			<div class="date">October 2010 - February 2015</div>
-			<h4>Certificate of Completion in Computer Usage and Applications</h4>
-            	</div>
+           		<h3>Rio Salado</h3>
+				<div class="block-date">
+					<div class="date">October 2010 - February 2015</div>
+					<h4>Certificate of Completion in Computer Usage and Applications</h4>
+            			</div>
 			
-		<div class="block-date">
-             		<div class="date">March 2015 - October 2018</div>
-                	<h4>Certificate of Completion in Networking: Design and System Support</h4>
-            	</div>
+			<div class="block-date">
+             			<div class="date">March 2015 - October 2018</div>
+                			<h4>Certificate of Completion in Networking: Design and System Support</h4>
+            		</div>
 		
-		<div class="block-date">
-			<div class="date">November 2018 - Present</div>
-			<h6>(Only missing required ENG102 First-Year Composition, 3 credits)</h6>
+			<div class="block-date">
+				<div class="date">November 2018 - Present</div>
+					<h6>(Only missing required ENG102 First-Year Composition, 3 credits)</h6>
+			</div>
 		</div>
+		
+		<div id="content-prime">
+			<h3>Calvary Chapel Bible College</h3>
+				<div class="date">November 2014 - July 2018</div>
+					<h4>Associate of Applied Science: Theology</h4>
+				</div>
+				<div class="date">July 2018 - Present</div>
+					<h4>Bachelor of Biblical Studies</h4>
+				</div>
 			
 	</body>
 </html>
