--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 		
 			<div class="block-date">
 				<div class="date">November 2018 - Present</div>
+					<h4>Associate in Applied Science in Computer Technology</h4>
 					<h6>(Only missing required ENG102 First-Year Composition, 3 credits)</h6>
 			</div>
 		</div>
