--- a/index.html
+++ b/index.html
@@ -69,14 +69,33 @@
 				</div>
 		</div>
 		
-		<div id="content-prime">
-			<h3>Calvary Chapel Bible College - Murrieta, CA</h3>
-				<div class="date">November 2014 - July 2018</div>
-					<h4>Associate of Applied Science: Theology</h4>
-				
-				<div class="date">July 2018 - Present</div>
-					<h4>Bachelor of Biblical Studies</h4>
+		<div id="content-professionalheader">
+			Work History
 		</div>
+		
+			<div id="content-prime">
+           				<h3>Calvary Chapel Fourteen Six</h3>
+						<div class="block-date">
+							<div class="date">May 2019 - Present</div>
+								<h4>Pastoral Intern</h4>
+						</div>
+			</div>
+				
+			<div id="content-prime">
+           			<h3>Calvary Chapel Surprise</h3>
+					<div class="block-date">
+						<div class="date">August 2015 - May 2019</div>
+							<h4>Facility Setup Associate</h4>
+								<ul>
+									<li>Reported customer feedback to management, including any signs of customer dissatisfaction.</li>
+									<li>Collaborated with clients from concept through final delivery of product or service.</li>
+									<li>Tracked orders and notified customers of status or potential delays.</li>
+									<li>Maintained accurate stock records and schedules.</li>
+									<li>Established long-term customer relationships through prompt and courteous service.</li>
+									<li>Consistently met deadlines and requirements for all production work orders.</li>
+								</ul>
+					</div>
+			</div>
 			
 	</body>
 </html>
