--- a/index.html
+++ b/index.html
@@ -69,6 +69,18 @@
 				</div>
 		</div>
 		
+		<div id="content-prime">
+           		<h3>Calvary Chapel Bible College - Murrieta, CA</h3>
+				<div class="block-date">
+					<div class="date">November 2014 - July 2017</div>
+						<h4>Associate of Biblical Studies</h4>
+
+             				<div class="date">July 2018 - Present</div>
+                				<h4>Bachelor of Biblical Studies</h4>
+							<h6>(99 completed credits out of 120 with 15 credits in progress.)</h6>
+				</div>
+		</div>
+		
 		<div id="content-professionalheader">
 			Work History
 		</div>
