--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				<ul>
 					<li>Excellent communication skills</li>
 					<li>Technical support</li>
-					<li>resource scheduling</li>
+					<li>Resource scheduling</li>
 					<li>Customer focused</li>
 					<li>Troubleshooting</li>
 				</ul>
