--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
 			</div>
 			
 			<div id="content-prime">
+			<h3>Grand Canyon University - College of Science Engineering and Technology - Phoenix, AZ</h3>
+				<div class="block-date">
+					<div class="date">August 2019 - December 2019</div>
+					<h4>Undergraduate Certificate of Completion in Java Programming</h4>
+					
        			<h3>Maricopa Community Colleges - Rio Salado Community College - Tempe, AZ</h3>
 				<div class="block-date">
 					<div class="date">October 2010 - February 2015</div>
@@ -85,10 +90,16 @@
 				</div>
 		
 				<div id="content-prime">
-					<h3>Calvary Chapel Fourteen Six</h3>
+					<h3>Calvary Chapel FourteenSix</h3>
 					<div class="block-date">
 						<div class="date">May 2019 - Present</div>
 						<h4>Pastoral Intern</h4>
+					</div>
+					<div id="content-prime">
+					<h3>FourteenSix Christian Academy</h3>
+					<div class="block-date">
+						<div class="date">May 2019 - Present</div>
+						<h4>Administrative Assitant</h4>
 					</div>
 					</div>
 					
@@ -102,7 +113,8 @@
 								<li>Collaborated with clients from concept through final delivery of product or service.</li>
 								<li>Tracked orders and notified customers of status or potential delays.</li>
 								<li>Maintained accurate stock records and schedules.</li>
-								<li>Established long-term customer relationships through prompt and courteous service.</li>									<li>Consistently met deadlines and requirements for all production work orders.</li>
+								<li>Established long-term customer relationships through prompt and courteous service.</li>
+								<li>Consistently met deadlines and requirements for all production work orders.</li>
 							</ul>
 						</div>
 						</div>
