--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			<div id="content-prime">
 			<h3>Grand Canyon University - College of Science Engineering and Technology - Phoenix, AZ</h3>
 				<div class="block-date">
-					<div class="date">August 2019 - December 2019</div>
+					<div class="date">August 2019 - Present</div>
 					<h4>Undergraduate Certificate of Completion in Java Programming</h4>
 					
        			<h3>Maricopa Community Colleges - Rio Salado Community College - Tempe, AZ</h3>
