--- a/index.html
+++ b/index.html
@@ -94,12 +94,27 @@
 					<div class="block-date">
 						<div class="date">May 2019 - Present</div>
 						<h4>Pastoral Intern</h4>
+						<ul>
+							<il>Performed various administrative functions, including filing paperwork, delivering mail, sorting mail, office cleaning and bookkeeping</il>
+							<il>Maintained and processed invoices, deposits and money logs</il>
+							<il>Applied advanced administrative and analytical skills in overseeing day-to-day operational activities</il>
+							<il>Transcribed meeting minutes for recordkeeping and submitted to senior management</il>
+							<il>Recruited and trained new volunteers on volunteer program goals and objectives</il>
+						</ul>
 					</div>
 					<div id="content-prime">
 					<h3>FourteenSix Christian Academy</h3>
 					<div class="block-date">
 						<div class="date">May 2019 - Present</div>
 						<h4>Administrative Assitant</h4>
+						<ul>
+							<liPerformed general office duties, including answering multi-line phones, routing telephone calls or messages to appropriate staff and greeting visitors</il>
+							<il>Managed office inventory by restocking supplies and placing purchase orders to maintain adequate stock levels</il>
+							<il>Kept physical files and digitized records organized for easy updating and retrieval by authorized team members</il>
+							<il>Organized classroom materials to help teachers prepare for daily instruction and activities</il>
+							<il>Provided diverse assistance to teachers, including clerical support, classroom management and document coordination</il>
+						</ul>
+						
 					</div>
 					</div>
 					
