--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 					
 					<div class="date">July 2018 - Present</div>
 					<h4>Bachelor of Biblical Studies</h4>
-					<h6>(99 completed credits out of 120 with 15 credits in progress.)</h6>
+					<h6>(114 completed credits out of 120 required.)</h6>
 					</div>
 					</div>
 				
